# reasoning-and-agents-education

demo/: D01_SFT_with_CoT_Qwen2.ipynb  D02_CoT_BeamSearch.ipynb  README.md  pyproject.toml
