[project]
name = "reasoning-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.45.3",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "numexpr>=2.10.2",
    "peft>=0.14.0",
    "pymupdf>=1.25.3",
    "tensorboardx>=2.6.2.2",
    "trl>=0.15.2",
    "unsloth>=2025.3.9",
    "unstructured>=0.16.25",
    "vllm>=0.7.3",
    "wandb>=0.19.8",
    "wikipedia>=1.4.0",
]
